# biometric-converter

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  DockerfileWebService  DockerfileWs  LICENSE.md  README.md
biomdi/: CMakeLists.txt
biomdi/include/: biomdi.h  biomdimacro.h  fmrsort.h
biomdi/lib/: biomdi.c  fmr.c  fvmr.c  iso2ansi.c  xy.c
converter/: CMakeLists.txt
converter/lib/: converter.h
example/: CMakeLists.txt  example.c  sample_image.wsq
fmr/: angle.c  ansi2iso.c  fedb.c  fmd.c  polar.c  quality.c  random.c  validate.c
fmr/include/: fmr.h  fmr2fmr.h
include/: converter.h
lib/: converter.c  converter.h
nbis/: CMakeLists.txt
nbis/include/: an2k.h  an2kseg.h  chkan2k.h  computil.h  dataio.h  dpyan2k.h  dpyimage.h  fet.h  fixup.h  histogen.h  ihead.h  intrlv.h  invbyte.h  ioutil.h  jpegb.h  jpegl.h  jpeglsd4.h  memalloc.h  nbis_sysdeps.h  nistcom.h  png_dec.h  usebsd.h  util.h  version.h  wsq.h
nbis/lib/: allocfet.c  bres.c  bubble.c  computil.c  dataio.c  delfet.c  extrfet.c  fatalerr.c  fileexst.c  filehead.c  fileroot.c  filesize.c  filetail.c  findfile.c  freefet.c  intrlv.c  invbyte.c  invbytes.c  lkupfet.c  memalloc.c  newext.c  nistcom.c  printfet.c  readfet.c  readutil.c  ssxstats.c  strfet.c  syserr.c  ticks.c  time.c  updatfet.c  writefet.c
nbis/lib/an2k/: alloc.c  an2k_globals.c  an2k_util.c  append.c  copy.c  date.c  decode.c  delete.c  flip.c  fmtstd.c  fmttext.c  getimg.c  insert.c  is_an2k.c  lookup.c  print.c  read.c  seg.c  select.c  size.c  subst.c  to_iafis.c  to_nist.c  type.c  type1314.c  update.c  value2.c
nbis/lib/jpegb/: jpegb_decoder.c  jpegb_encoder.c  jpegb_ppi.c  marker.c  membuf.c
nbis/lib/jpegl/: huftable.c  imgdat.c  jpegl_decoder.c  jpegl_encoder.c  jpegl_huff.c  jpegl_ppi.c  jpegl_tableio.c  jpegl_util.c  sd4util.c
nbis/lib/wsq/: cropcoeff.c  sd14util.c  tree.c  wsq_decoder.c  wsq_encoder.c  wsq_globals.c  wsq_huff.c  wsq_ppi.c  wsq_tableio.c  wsq_util.c
web-service/: build.gradle.kts  settings.gradle.kts
web-service/src/main/kotlin/net/iriscan/bcws/: Application.kt
web-service/src/main/kotlin/net/iriscan/bcws/controller/: ConvertController.kt
web-service/src/main/kotlin/net/iriscan/bcws/dto/: Base64Image.kt  Request.kt  Response.kt
web-service/src/main/kotlin/net/iriscan/bcws/extension/: StringBase64Ext.kt
web-service/src/main/kotlin/net/iriscan/bcws/lib/: BiometricConverter.kt  Converter.kt  ConverterFactory.kt  FileFormat.kt
web-service/src/main/resources/: application.properties
